--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: eleft/auth
+          image: eleft/auth:latest
 ---
 apiVersion: v1
 kind: Service
